# MISalign

./: LICENSE  README.md  branch-feature_relation_visualizer.md  branch-feature_relations_management.md  main.ipynb  main_direct_simple.py  main_simple.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
MISalign/: __init__.py  main_simple.ipynb
MISalign/alignment/: align_cv.py  interactive_manual.py  manual.py  prototype_aligncv.ipynb  prototype_diff_grad.ipynb  prototype_diff_grad2.ipynb  prototype_ipy_ui.ipynb  prototype_manual_relation.ipynb
MISalign/calibration/: a_5x.miscal  calibrate.py  prototype_calibration.ipynb  prototype_scale_bar.ipynb  scale_bar.py
MISalign/canvas/: canvas_rectangular.py  canvas_render.py  canvas_service.py  canvas_solve.py  prototype_render.ipynb  prototype_solve.ipynb
MISalign/gui_qt/: core.py  proto_core_r1.ipynb
MISalign/main_gui/: composed.py  menu.py
MISalign/model/: hdf5.py  image.py  mis_file.py  offset.py  project.py  project_service.py  prototype_relation_viewer.ipynb  (+3 more)
_example_data/: a_myproject_full.mis
canvas/: canvas_service.py
data/: a_myproject_4.mis  a_myproject_full.mis
doc/: conf.py  index.rst
gui/: menu.py
main_gui/: menu.py
model/: offset.py
notebooks/: align.ipynb  calibrate.ipynb  render.ipynb  setup.ipynb  utility.ipynb
service/: project_file.py
tests/: __init__.py  requirements.txt  test_canvas_rectangular.py  test_example.ipynb  test_model_hdf5.py  test_model_image.py  test_model_mis_file.py  test_model_project.py  test_model_relation.py  test_plugin_hdf5.py
(+96 files in other folders)
